Terminado Agregar Productos

--- a/src/main/webapp/venta_producto.html
+++ b/src/main/webapp/venta_producto.html
@@ -28,12 +28,14 @@
             <div class="upload-box">
 	            <i class="bi bi-image" id="image-logo"></i>
 	            <p class="image-text" id="foto">Agrega las imagenes</p>
-	            <div class="container">
-	            <!-- <div class="image-wrapper"><img src="assets/img/Arte.webp"><button class="btn-close delete-btn"></button></div>
-	            <div class="image-wrapper"><img src="assets/img/Acuaticos.webp"><button class="btn-close delete-btn"></button></div>
-	            <div class="image-wrapper"><img src="assets/img/Apple_logo_black.svg"><button class="btn-close delete-btn"></button></div>
-	            <div class="image-wrapper"><img src="assets/img/Belleza.webp"><button class="btn-close delete-btn"></button></div>
-	            <div class="image-wrapper"><img src="assets/img/camara.webp"><button class="btn-close delete-btn"></button></div> -->
+	            <div class="container" id="image-preview">
+	            <!-- Molde de las imagenes
+		            <div class="image-wrapper"><img src="assets/img/Arte.webp" class="preview-image"><button class="btn-close delete-btn"></button></div>
+		            <div class="image-wrapper"><img src="assets/img/Acuaticos.webp" class="preview-image"><button class="btn-close delete-btn"></button></div>
+		            <div class="image-wrapper"><img src="assets/img/Apple_logo_black.svg" class="preview-image"><button class="btn-close delete-btn"></button></div>
+		            <div class="image-wrapper"><img src="assets/img/Belleza.webp" class="preview-image"><button class="btn-close delete-btn"></button></div>
+		            <div class="image-wrapper"><img src="assets/img/camara.webp" class="preview-image"><button class="btn-close delete-btn"></button></div>
+	             -->
 	            </div>
 	            <button type="submit" class="btn btn-light image-btn" id="load-image">
 	            Cargar imagen
