--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -89,8 +89,8 @@
         </div>
          -->
 			<!--  -->
-        <div class="categoriesText h-auto align-content-center text-center ">
-            <p class="hov">Guardado</p>
+        <div class="categoriesText h-auto align-content-center text-center" id="category-container">
+            <p class="hov" id="saved">Guardado</p>
             <p class="hov cat-pdr " data-codigo-categoria="1">Tecnologia</p>
             <p class="hov cat-pdr" data-codigo-categoria="2">Vehiculos</p>
             <p class="hov cat-pdr" data-codigo-categoria="3">Moda</p>
@@ -99,7 +99,7 @@
             <p class="hov cat-pdr" data-codigo-categoria="6">Salud y Belleza</p>
             <p class="hov cat-pdr" data-codigo-categoria="7">Equipo Industrial</p>
             <p class="hov cat-pdr" data-codigo-categoria="8">Hogar y Jardin</p>
-            <p class="hov"><a>Vender</a></p>
+            <p class="hov">Vender</p>
         </div>
 
         <div class="carousel slide" data-bs-ride="carousel">
