--- a/src/main/webapp/ventas.html
+++ b/src/main/webapp/ventas.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="searchbar">
-            <a class="logo" href="index.html"><img src="assets/resources/EBay.svg.png" title="eBay Home" height="70"></a>
+            <a class="logo" href="index.html"><img src="assets/img/Ebay.svg" title="eBay Home" height="70"></a>
             
             <button class="buyCtg">Compra por Categoria</button>
             <input type="text" class="searchInput" placeholder="Buscar">
@@ -82,17 +82,17 @@
             <div class="col-md-9">
             <div class="row" id="product-grid">
                 <h3>Ventas</h3>
-                <div class="seller-grid">
-                    <div class="seller-card">
+                <div class="seller-grid" id="product-container">
+                    <!-- <div class="seller-card">
                         <div class="seller-left">
                             <div class="seller-img">
-                            <img src="assets/img/otra.jpg">
+                            <img src="assets/img/Cartas.webp">
                             </div>
                             <div class="seller-info">
                             <strong>Cafetera</strong>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div> 
                 
             </div>
@@ -126,5 +126,6 @@
        <script src="assets/js/country.js"></script>
        <script src="assets/js/accountData.js"></script>
        <script src="assets/js/header.js"></script>
+       <script src="assets/js/ventas.js"></script>
     </body>
 </html>
