--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -155,7 +155,7 @@
 
         </div>
 
-        <div class="oferts">
+      <!--   <div class="oferts">
             <div class="OfertCard">
                 <p class="card-title">
                    Oferta del dia
@@ -165,7 +165,7 @@
             </div>
         </div>
 
-        <div class="Sellbanner"></div>
+        <div class="Sellbanner"></div> -->
         <div class="footer"></div>
 		
 		<!-- Modal de seleccionar ubicacion -->
