--- a/src/main/webapp/seller_user.html
+++ b/src/main/webapp/seller_user.html
@@ -47,7 +47,7 @@
             <input type="text" class="searchInput" name="search "placeholder="Buscar">
             <button class="search">Buscar</button>
         </div>
-        <div class="container-fluid py-2 background-container-relationated" style="background-color: #f7f7f7;">
+        <!-- <div class="container-fluid py-2 background-container-relationated" style="background-color: #f7f7f7;">
             <div class="div-container-relationated">
                 <div id="relationated-options">Opciones relacionadas</div>
                 <div class="options"><a href="option1.html">Busqueda 1</a></div>
@@ -62,26 +62,26 @@
                 </div>
             </div>
         </div>
-
+ -->
 
   <div class="store-header bg-light py-4">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-2">
           <div class="store-logo">
-            <img class="store-img" src="assets/img/FB.webp">
+            <img class="store-img" id="profilePic">
           </div>
         </div>
         <div class="col-md-6">
-          <h1 class="store-name">Freddy Fazbear</h1>
+          <h1 class="store-name" id="seller-name"></h1>
           <div class="store-stats">
             <span class="me-3">- artículos vendidos</span>
-            <span class="me-3">- seguidores</span>
+            <span class="me-3" id="followers"></span>
           </div>
         </div>
         <div class="col-md-4 text-end">
-          <button class="btn"><i class="bi bi-share"></i> Compartir</button>
-          <button class="btn"><i class="bi bi-chat-right-text"></i> <a href="mensajes.html" style="color: black; text-decoration: none;">Contactar</a></button>
+          <!-- <button class="btn"><i class="bi bi-share"></i> Compartir</button>
+          <button class="btn"><i class="bi bi-chat-right-text"></i> <a href="mensajes.html" style="color: black; text-decoration: none;">Contactar</a></button> -->
           <button class="btn"><i class="bi bi-heart"></i> Guardar</button>
         </div>
       </div>
@@ -94,26 +94,26 @@
         <div class="col-md-6">
           <div class="nav-tabs-container">
             <ul class="nav nav-tabs border-0 d-flex">
-              <li class="nav-item">
-                <a class="nav-link active" href="seller_user.html">Comprar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="seller_ventas.html">Ventas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="seller_about_it.html">Acerca de</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="seller_coment.html">Comentarios</a>
-              </li>
-            </ul>
+                    <li class="nav-item">
+                        <a id="user-products" class="nav-link active" href="seller_user.html">Comprar</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="seller_ventas.html">Ventas</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a id="about-it" class="nav-link" href="seller_about_it.html">Acerca de</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="comments" class="nav-link" href="seller_coment.html">Comentarios</a>
+                    </li>
+                    </ul>
           </div>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <div class="search-store">
             <input type="text" class="form-control" placeholder="Buscar">
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -121,17 +121,25 @@
   <div class="main-content py-4">
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <!-- <div class="col-md-3"> -->
           <div class="sidebar">
             <h5>Todas las categorias</h5>
             
           </div>
-        </div>
+       <!--  </div> -->
 
         <div class="col-md-9">
           <div class="row" id="product-grid">
             <h1>Todos los artículos</h1>
             
+            <!-- <div class="card">
+			    <img src="assets/uploads/Cartas.webp" alt="Producto">
+			    <div class="card-content">
+			        <div class="title">Pokemon Japanese Mega Symphonia Booster Box - 30 Booster...</div>
+			        <div class="price">L 2,749.71</div>
+			    </div>
+			</div> -->
+			
           </div>
 
         </div>
@@ -163,6 +171,8 @@
         <script src="assets/js/country.js"></script>
         <script src="assets/js/accountData.js"></script>
         <script src="assets/js/header.js"></script>
+        <script src="assets/js/seller_header.js"></script>
+        <script src="assets/js/seller_user.js"></script>
   
 </body>
 </html>
