--- a/src/main/webapp/Producto.html
+++ b/src/main/webapp/Producto.html
@@ -48,7 +48,7 @@
             <input type="text" class="searchInput" placeholder="Buscar">
             <button class="search">Buscar</button>
         </div>
-        <div class="container-fluid py-2 background-container-relationated" style="background-color: #f7f7f7;">
+        <!-- <div class="container-fluid py-2 background-container-relationated" style="background-color: #f7f7f7;">
             <div class="div-container-relationated">
                 <div id="relationated-options">Opciones relacionadas</div>
                 <div class="options"><a href="option1.html">Busqueda 1</a></div>
@@ -62,7 +62,7 @@
                     <div id="text-include-description">Incluir Descripcion</div>
                 </div>
             </div>
-        </div>
+        </div> -->
         
         <!-- FIN-ENCABEZADO -->
 
