--- a/src/main/webapp/L_F.html
+++ b/src/main/webapp/L_F.html
@@ -160,5 +160,6 @@
        <script src="assets/js/country.js"></script>
        <script src="assets/js/accountData.js"></script>
        <script src="assets/js/header.js"></script>
+       <script src="assets/js/L_F.js"></script>
     </body>
 </html>
