--- a/src/main/webapp/Carro_de_Compras.html
+++ b/src/main/webapp/Carro_de_Compras.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Carro de compras | Ebay</title>
+        <title>Ebay</title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	    <link rel="stylesheet" href="assets/css/bootstrap-icons.min.css">
 	    <link rel="stylesheet" href="assets/css/carro_de_compras.css">
@@ -45,7 +45,7 @@
             <input type="text" class="searchInput" name="search "placeholder="Buscar">
             <button class="search">Buscar</button>
         </div>
-        <div class="container-fluid py-2 background-container-relationated" style="background-color: #f7f7f7;">
+        <!-- <div class="container-fluid py-2 background-container-relationated" style="background-color: #f7f7f7;">
             <div class="div-container-relationated">
                 <div id="relationated-options">Opciones relacionadas</div>
                 <div class="options"><a href="option1.html">Busqueda 1</a></div>
@@ -59,7 +59,7 @@
                     <div id="text-include-description">Incluir Descripcion</div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div id="principal-layout">
             <div id="shopping-cart-title">
@@ -69,7 +69,7 @@
                 <div id="shopping-cart-items">
 
                     <!-- Plantilla para los multiples productos con su informacion -->
-                    <div class="shopping-cart-product-model"> 
+                    <!-- <div class="shopping-cart-product-model"> 
                         <div class="products-seller">
                             <div class="sales-person-img2"></div>
                             <div class="sales-person-name2">
@@ -95,10 +95,10 @@
                                 <div class="devolution-politics"><strong>Politica de Devoluciones</strong></div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Plantilla para los multiples productos con su informacion -->
-                    <div class="shopping-cart-product-model"> 
+                    <!-- <div class="shopping-cart-product-model"> 
                         <div class="products-seller">
                             <div class="sales-person-img2"></div>
                             <div class="sales-person-name2">
@@ -124,10 +124,10 @@
                                 <div class="devolution-politics"><strong>Politica de Devoluciones</strong></div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Plantilla para los multiples productos con su informacion -->
-                    <div class="shopping-cart-product-model"> 
+                    <!-- <div class="shopping-cart-product-model"> 
                         <div class="products-seller">
                             <div class="sales-person-img2"></div>
                             <div class="sales-person-name2">
@@ -144,7 +144,7 @@
                             <div class="product-information-content2">
                                 <div class="quantity-product-container">
                                     <h5 class="product-price">Cantidad: </h5>
-                                    <div class="quantity-product-number2"><strong>---</strong></div>
+                                    <select class="quantity-product-number2"></select>
                                 </div>
                                 <div class="agent-intermediate-ship">Informacion del Agente Intermediario</div>
                             </div>
@@ -153,11 +153,9 @@
                                 <div class="devolution-politics"><strong>Politica de Devoluciones</strong></div>
                             </div>
                         </div>
-                    </div>
-
-                    
-
+                    </div> -->
                 </div>
+                
                 <div id="shopping-payment">
                     <div id="before-payment">
                         <div id="items-shopping">
@@ -168,10 +166,10 @@
                             <div id="ship-name"><strong>Envio a ...</strong></div>
                             <div id="ship-price"><strong>L. ---</strong></div>
                         </div>
-                        <div id="discount-shopping">
+                        <!-- <div id="discount-shopping">
                             <div id="discount-name"><strong>Descuentos</strong></div>
                             <div id="discount-price"><strong>-L. ---</strong></div>
-                        </div>
+                        </div> -->
                     </div>
                     <div id="payment">
                         <div id="subtotal-container">
