--- a/src/main/webapp/L_F.html
+++ b/src/main/webapp/L_F.html
@@ -87,7 +87,7 @@
                 <div id="favorites-list-container">
                     
                     <!-- Plantilla para la Publicacion de Productos -->
-                    <div class="favorites-list-molde">
+                    <!-- <div class="favorites-list-molde">
                         <div class="favorites-list-img"></div>
                         <div class="favorites-list-information">
                             <div class="favorites-list-product-name">Nombre del Producto y Descripcion Complementaria</div>
@@ -106,10 +106,10 @@
                             <button class="btn-list-favorites" id="btn-more-seller-products">Ver otros articulos del vendedor</button>
                             <button class="btn-list-favorites" id="btn-similar-items">Ver Articulos Similares</button>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Plantilla para la Publicacion de Productos -->
-                    <div class="favorites-list-molde">
+                    <!-- <div class="favorites-list-molde">
                         <div class="favorites-list-img"></div>
                         <div class="favorites-list-information">
                             <div class="favorites-list-product-name">Nombre del Producto y Descripcion Complementaria</div>
@@ -128,7 +128,7 @@
                             <button class="btn-list-favorites" id="btn-more-seller-products">Ver otros articulos del vendedor</button>
                             <button class="btn-list-favorites" id="btn-similar-items">Ver Articulos Similares</button>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
