--- a/src/main/webapp/Producto.html
+++ b/src/main/webapp/Producto.html
@@ -171,9 +171,9 @@
                         <div id="quantity-product-number"><strong>---</strong></div>
                     </div>
                 </div>
-                <button id="btn-buy-it-now" class="btn-items-purchase">¡Cómpralo Ahora!</button>
+                <!-- <button id="btn-buy-it-now" class="btn-items-purchase">¡Cómpralo Ahora!</button> -->
                 <button id="btn-add-to-shopping-cart" class="btn-items-purchase">Agregar al carro de compras</button>
-                <button id="btn-add-to-favorites-list" class="btn-items-purchase"><i class="bi bi-suit-heart" style="margin-right: 5px;"></i>Agregar a la lista de favoritos</button>
+                <button id="btn-add-to-favorites-list" class="btn-items-purchase"><i id="heart-icon" class="bi bi-suit-heart" style="margin-right: 5px;"></i>Agregar a la lista de favoritos</button>
                 
                 <div id="product-characteristics-container">
                     <div class="product-characteristics-header">
