--- a/src/main/webapp/categorias.html
+++ b/src/main/webapp/categorias.html
@@ -5,7 +5,7 @@
         <title>Ebay</title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	    <link rel="stylesheet" href="assets/css/bootstrap-icons.min.css">
-	    <link rel="stylesheet" href="assets/css/index.css">
+	    <link rel="stylesheet" href="assets/css/categorias.css">
 	    <link rel="stylesheet" href="assets/css/header.css">
     </head>
     <body>
@@ -45,7 +45,7 @@
             <input type="text" class="searchInput" name="search "placeholder="Buscar">
             <button class="search">Buscar</button>
         </div>
-        <div class="container-fluid py-2 background-container-relationated" style="background-color: #f7f7f7;">
+        <!-- <div class="container-fluid py-2 background-container-relationated" style="background-color: #f7f7f7;">
             <div class="div-container-relationated">
                 <div id="relationated-options">Opciones relacionadas</div>
                 <div class="options"><a href="option1.html">Busqueda 1</a></div>
@@ -59,7 +59,7 @@
                     <div id="text-include-description">Incluir Descripcion</div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="container-fluid py-2" style="background-color: #f7f7f7;">
       <nav aria-label="breadcrumb">
@@ -80,6 +80,20 @@
           <section class="mb-5">
             <h2 class="h4 mb-4">Compra por categoria</h2>
             <div class="row g-4" id="categorie-container">
+            
+            	<!-- <div class="card">
+        			<img src="assets/img/Cartas.webp" alt="Maquillaje">
+        			<p>Maquillaje</p>
+    			</div>
+            	<div class="card">
+        			<img src="assets/img/Cartas.webp" alt="Maquillaje">
+        			<p>Maquillaje</p>
+    			</div>
+            	<div class="card">
+        			<img src="assets/img/Cartas.webp" alt="Maquillaje">
+        			<p>Maquillaje</p>
+    			</div> -->
+    			
             </div>
           </section>
 
