--- a/src/main/webapp/Checkout.html
+++ b/src/main/webapp/Checkout.html
@@ -23,37 +23,37 @@
             <div id="pay-with">
                 <div id="pay-with-name"><h1 id="h12">Pagar con</h1></div>
                 <div class="card-container">
-                    <button class="btn-card"><i class="bi bi-circle"></i></button>
+                    <button class="btn-card" id="paypal-radio"><i class="bi bi-circle"></i></button>
                     <div class="card-img-name">
-                        <div class="card-img"><img src="assets/resources/PayPal.svg.png" title="PayPal" height="30"></div>
+                        <div class="card-img"><img src="assets/img/PayPal.svg.png" title="PayPal" height="30"></div>
                         <div class="card-name"></div>
                     </div>
                 </div>
-                <div class="card-container">
+                <!-- <div class="card-container">
                     <button class="btn-card"><i class="bi bi-circle"></i></button>
                     <div class="card-img-name">
                         <div class="card-img"><img src="assets/resources/Google.png" title="Google Pay" height="30"></div>
                         <div class="card-name"></div>
                     </div>
-                </div>
-                <div class="card-container">
+                </div> -->
+                <!-- <div class="card-container">
                     <button class="btn-card"><i class="bi bi-circle"></i></button>
                     <div class="card-img-name">
-                        <div class="card-img"><img src="assets/resources/PayPal-Credit.png" title="PayPal Credit" height="30"></div>
+                        <div class="card-img"><img src="assets/img/Visa.svg" title="Credit Card" height="30"></div>
                         <div class="card-name"></div>
                     </div>
-                </div>
-                <div class="card-container">
+                </div> -->
+                <!-- <div class="card-container">
                     <button class="btn-card" type="button"><i class="bi bi-circle"></i></button>
                     <h4>Agregar una nueva tarjeta</h4>
-                </div>
+                </div> -->
             </div>
             <div id="sending-data-container">
                 <div id="sending-title"><h1 id="h13">Enviar a</h1></div>
                 <div class="sending-information">
                     <div class="information" id="name-information">| Informacion del Nombre Completo |</div>
                     <div class="information" id="name-direction">| Direccion de Barrio o Colonia |</div>
-                    <div class="information" id="name-city-postal-code">| Codigo Postal / Departamento / Ciudad |</div>
+                    <!-- <div class="information" id="name-city-postal-code">| Codigo Postal / Departamento / Ciudad |</div> -->
                     <div class="information" id="name-country">| Nombre del Pais |</div>
                     <div class="information" id="phone-number">| Numero de Telefono |</div>
                     <button class="btn-change-data" type="button">Cambiar</button>
@@ -149,7 +149,7 @@
                     <div id="complete-transaction-payment-total-name"><strong>Total</strong></div>
                     <div id="complete-transaction-payment-total-price"><strong>L. ---</strong></div>
                 </div>
-            <button id="btn-complete-final-transaction"><h2>Pagar con (...)</h2></button>
+            <button id="btn-complete-final-transaction"><h2 id="checkout-tag">Pagar con (...)</h2></button>
             </div>
         </div>
     </div>
