--- a/src/main/webapp/Compras.html
+++ b/src/main/webapp/Compras.html
@@ -89,8 +89,8 @@
                 </div>
                 <br>
                 <h4 >Pedidos</h4>
-                <div class="seller-grid">
-                    <div class="seller-card">
+                <div class="seller-grid" id="product-container">
+                    <!-- <div class="seller-card">
                         <div class="seller-left">
                             <div class="seller-img">
                             <img src="assets/img/otra.jpg">
@@ -104,7 +104,7 @@
                             <div class="icon-btn"><i class="bi bi-heart-fill"></i></div>
                             <div class="icon-btn"><i class="bi bi-three-dots"></i></div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>    
             </div>
         </div>
@@ -135,5 +135,6 @@
        <script src="assets/js/country.js"></script>
        <script src="assets/js/accountData.js"></script>
        <script src="assets/js/header.js"></script>
+       <script src="assets/js/compras.js"></script>
     </body>
 </html>
