--- a/src/main/webapp/seller_user.html
+++ b/src/main/webapp/seller_user.html
@@ -75,7 +75,7 @@
         <div class="col-md-6">
           <h1 class="store-name" id="seller-name"></h1>
           <div class="store-stats">
-            <span class="me-3">- artículos vendidos</span>
+            <span class="me-3" id="products-selled">- artículos vendidos</span>
             <span class="me-3" id="followers"></span>
           </div>
         </div>
