--- a/src/main/webapp/Checkout.html
+++ b/src/main/webapp/Checkout.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header-complete-transaction">
         <div class="left-header">
-            <div id="logo-header"><a href="index.html"><img src="assets/img/Ebay.svg" title="eBay Home" height="70"></a></div>
+            <div id="logo-header"><a href="index.html"><img src="assets/img/EBay_logo.svg" title="eBay Home" height="70"></a></div>
             <div id="complete-transaction-name"><h1 id="h11">Completar Transaccion</h1></div>
         </div>
         <div class="right-header">
