--- a/src/main/webapp/Compras.html
+++ b/src/main/webapp/Compras.html
@@ -41,9 +41,9 @@
         </div>
 
         <div class="searchbar">
-            <a class="logo" href="index.html"><img src="assets/resources/EBay.svg.png" title="eBay Home" height="70"></a>
+            <a class="logo" href="index.html"><img src="assets/img/EBay_logo.svg" title="eBay Home" width="100" height="100"></a>
             
-            <button class="buyCtg">Compra por Categoria</button>
+            <!-- <button class="buyCtg">Compra por Categoria</button> -->
             <input type="text" class="searchInput" placeholder="Buscar">
             <div class="fill"></div>
             <button class="search">Buscar</button>
@@ -82,10 +82,10 @@
             <div class="col-md-9">
                 <div class="d-flex justify-content-between align-items-center flex-wrap mb-4">
                     <h3>Compras</h3>
-                    <form class="d-flex search-box" role="search">
+                    <!-- <form class="d-flex search-box" role="search">
                     <input class="form-control me-1" type="search" placeholder="Buscar en tus pedidos" style="width: 550px; background-color: #f7f7f7; padding-right: 8px;">
                     <button class="btn btn-primary" style="border-radius: 40px; font-weight: bold;">Buscar</button>
-                    </form>
+                    </form> -->
                 </div>
                 <br>
                 <h4 >Pedidos</h4>
