--- a/src/main/webapp/new_account.html
+++ b/src/main/webapp/new_account.html
@@ -120,7 +120,7 @@
 				</div>
 				<div class="modal-body">
 					<p class="fs-5">Se ingresaron los datos con exito!</p>
-					<button type="button" class="btn btn-primary closeBtn" data-bs-dismiss="modal" aria-label="Close">Cerrar</button>
+					<button type="button" class="btn btn-primary closeBtn" data-bs-dismiss="modal" aria-label="Close" id="success-btn">Cerrar</button>
 				</div>
 			</div>
 		</div>
