--- a/src/main/webapp/venta_producto.html
+++ b/src/main/webapp/venta_producto.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header-fijo">
         <div id="logo">
-            <a href="index.html"><img src="assets/img/Ebay.svg" height="60" width="150"></a>
+            <a href="index.html"><img src="assets/img/EBay_logo.svg" height="60" width="150"></a>
         </div>
         <hr>
     </div>
