--- a/src/main/webapp/Producto.html
+++ b/src/main/webapp/Producto.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="searchbar">
-            <a class="logo" href="index.html"><img src="assets/resources/EBay.svg.png" title="eBay Home" height="70"></a>
+            <a class="logo" href="index.html"><img src="assets/img/EBay_logo.svg" title="eBay Home" width="100" height="100"></a>
             <input type="text" class="searchInput" placeholder="Buscar">
             <button class="search">Buscar</button>
         </div>
