--- a/src/main/webapp/categorias.html
+++ b/src/main/webapp/categorias.html
@@ -41,7 +41,7 @@
         </div>
         
         <div class="searchbar">
-            <a class="logo" href="index.html"><img src="assets/img/Ebay.svg" title="eBay Home" width="100" height="100"></a>
+            <a class="logo" href="index.html"><img src="assets/img/EBay_logo.svg" title="eBay Home" width="100" height="100"></a>
             <input type="text" class="searchInput" name="search "placeholder="Buscar">
             <button class="search">Buscar</button>
         </div>
