--- a/src/main/webapp/ventas.html
+++ b/src/main/webapp/ventas.html
@@ -41,9 +41,9 @@
         </div>
 
         <div class="searchbar">
-            <a class="logo" href="index.html"><img src="assets/img/Ebay.svg" title="eBay Home" height="70"></a>
+            <a class="logo" href="index.html"><img src="assets/img/EBay_logo.svg" title="eBay Home" width="100" height="100"></a>
             
-            <button class="buyCtg">Compra por Categoria</button>
+            <!-- <button class="buyCtg">Compra por Categoria</button> -->
             <input type="text" class="searchInput" placeholder="Buscar">
             <div class="fill"></div>
             <button class="search">Buscar</button>
